tests/conformance/snapshots/obligation_invariant_conformance__conformance__macaroon_attenuation_vectors__deterministic_binary.snap
---
source: tests/conformance/macaroon_attenuation_vectors.rs
assertion_line: 298
expression: bytes_a
---
[
    2,
    14,
    0,
    116,
    101,
    115,
    116,
    58,
    105,
    100,
    101,
    110,
    116,
    105,
    99,
    97,
    108,
    8,
    0,
    108,
    111,
    99,
    97,
    116,
    105,
    111,
    110,
    2,
    0,
    0,
    9,
    0,
    1,
    15,
    39,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    5,
    0,
    5,
    42,
    0,
    0,
    0,
    121,
    35,
    219,
    126,
    101,
    50,
    144,
    16,
    159,
    162,
    232,
    201,
    9,
    94,
    224,
    196,
    153,
    147,
    94,
    133,
    28,
    166,
    52,
    51,
    65,
    19,
    217,
    100,
    189,
    162,
    139,
    33,
]
