tests/conformance/snapshots/obligation_invariant_conformance__conformance__macaroon_attenuation_vectors__multi_third_party_token.snap
---
source: tests/conformance/macaroon_attenuation_vectors.rs
assertion_line: 129
expression: token.to_binary()
---
[
    2,
    12,
    0,
    97,
    100,
    109,
    105,
    110,
    58,
    100,
    101,
    112,
    108,
    111,
    121,
    12,
    0,
    111,
    114,
    99,
    104,
    101,
    115,
    116,
    114,
    97,
    116,
    111,
    114,
    3,
    0,
    0,
    9,
    0,
    3,
    42,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    1,
    13,
    0,
    97,
    117,
    116,
    104,
    46,
    99,
    111,
    114,
    112,
    46,
    99,
    111,
    109,
    18,
    0,
    100,
    101,
    112,
    108,
    111,
    121,
    58,
    112,
    101,
    114,
    109,
    105,
    115,
    115,
    105,
    111,
    110,
    115,
    32,
    0,
    166,
    12,
    3,
    121,
    142,
    53,
    48,
    216,
    168,
    140,
    130,
    182,
    177,
    206,
    64,
    64,
    92,
    186,
    1,
    106,
    123,
    109,
    193,
    184,
    2,
    197,
    128,
    157,
    236,
    169,
    99,
    238,
    1,
    14,
    0,
    97,
    117,
    100,
    105,
    116,
    46,
    99,
    111,
    114,
    112,
    46,
    99,
    111,
    109,
    15,
    0,
    100,
    101,
    112,
    108,
    111,
    121,
    58,
    97,
    112,
    112,
    114,
    111,
    118,
    97,
    108,
    32,
    0,
    116,
    141,
    224,
    174,
    181,
    150,
    12,
    201,
    23,
    137,
    72,
    209,
    225,
    182,
    177,
    235,
    172,
    184,
    85,
    226,
    94,
    66,
    236,
    11,
    126,
    190,
    20,
    97,
    254,
    142,
    249,
    93,
    148,
    80,
    56,
    137,
    98,
    134,
    133,
    88,
    44,
    248,
    192,
    87,
    96,
    175,
    50,
    115,
    230,
    108,
    211,
    193,
    77,
    32,
    41,
    6,
    186,
    73,
    157,
    248,
    236,
    236,
    49,
    65,
]
