tests/conformance/snapshots/obligation_invariant_conformance__conformance__macaroon_attenuation_vectors__roundtrip_original_token.snap
---
source: tests/conformance/macaroon_attenuation_vectors.rs
assertion_line: 421
expression: token_bytes
---
[
    2,
    14,
    0,
    114,
    111,
    117,
    110,
    100,
    116,
    114,
    105,
    112,
    58,
    116,
    101,
    115,
    116,
    11,
    0,
    112,
    101,
    114,
    115,
    105,
    115,
    116,
    101,
    110,
    99,
    101,
    2,
    0,
    0,
    9,
    0,
    1,
    152,
    58,
    0,
    0,
    0,
    0,
    0,
    0,
    1,
    9,
    0,
    97,
    117,
    116,
    104,
    46,
    116,
    101,
    115,
    116,
    14,
    0,
    114,
    111,
    117,
    110,
    100,
    116,
    114,
    105,
    112,
    58,
    97,
    117,
    116,
    104,
    32,
    0,
    199,
    249,
    38,
    102,
    143,
    97,
    22,
    70,
    77,
    247,
    32,
    96,
    62,
    43,
    133,
    72,
    19,
    70,
    95,
    61,
    24,
    209,
    23,
    196,
    196,
    194,
    153,
    190,
    91,
    241,
    20,
    60,
    233,
    213,
    198,
    90,
    13,
    77,
    100,
    143,
    12,
    185,
    117,
    164,
    70,
    182,
    181,
    187,
    17,
    34,
    105,
    88,
    68,
    132,
    8,
    21,
    69,
    16,
    247,
    71,
    34,
    251,
    53,
    58,
]
